--- a/style.css
+++ b/style.css
@@ -107,6 +107,23 @@ body {
   height: 40px;
    display: none;
 }
+footer {
+  background-color: #714141;
+  color: #fff;
+  text-align: center;
+  padding: 15px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+footer p {
+  margin: 0;
+  font-size: 14px;
+  opacity: 0.9;
+  font-family: serif;
+}
+
 @media screen and (max-width: 550px) {
   .gameboard {
     grid-template-columns: repeat(3, minmax(90px, 1fr));
