--- a/style.css
+++ b/style.css
@@ -70,11 +70,6 @@ body {
 .cell:nth-child(9) {
   border-right: none;
 }
-.gameplayers {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 30px;
-}
 .player {
   margin-inline: 18px;
   font-size: 22px;
@@ -98,23 +93,23 @@ body {
 .alertbox {
   position: absolute;
   top: 0;
-  background-color: #dbabab;
+  background-color: #e8cccc;
   width: 100%;
   padding: 8px 12px;
   font-size: 20px;
   font-weight: 700;
   color: rgb(160, 24, 24);
-  height: 40px;
-   display: none;
+  height: 50px;
+  display: none;
 }
 footer {
-  background-color: #714141;
-  color: #fff;
-  text-align: center;
-  padding: 15px;
+  display: flex;
   position: fixed;
+  padding: 15px;
   bottom: 0;
   width: 100%;
+  height: 65px;
+  align-items: center;
 }
 
 footer p {
@@ -132,3 +127,23 @@ footer p {
     height: 90px;
   }
 }
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+  padding: 5px 10px; 
+  height: auto; 
+  min-height: 60px; 
+  overflow: hidden; 
+}
+
+.footer-image img {
+  max-height: 50px; 
+  width: 50px; 
+  box-shadow:-1px 2px 4px black;
+  border-radius: 5px;
+}
+
+
+
+
